--- a/css/main.css
+++ b/css/main.css
@@ -434,9 +434,10 @@ section.information .right_info {
         justify-content: center;
         width: 16px;
         height: 16px;
-        transition: transform 0.4s ease;
         text-decorattion: none; }
-        #footer .logo_info > .social > li > a:hover {
+        #footer .logo_info > .social > li > a > img {
+          transition: transform 0.4s ease; }
+        #footer .logo_info > .social > li > a:hover > img {
           transform: translateY(-8px); }
       #footer .logo_info > .social > li:last-child {
         margin-right: 0; }
@@ -505,5 +506,35 @@ section.information .right_info {
     font-size: 16px;
     margin-top: 66px;
     text-align: center; }
+
+.hamburger {
+  display: none;
+  position: relative;
+  right: 15px;
+  top: 0; }
+  .hamburger .line {
+    width: 24px;
+    height: 3px;
+    background-color: #333;
+    display: block;
+    margin: 6px auto;
+    transition: all 0.3s ease-in-out; }
+  .hamburger:hover {
+    cursor: pointer; }
+  .hamburger.is-active .line:nth-child(1) {
+    transform: translateY(9px) rotate(45deg); }
+  .hamburger.is-active .line:nth-child(2) {
+    opacity: 0; }
+  .hamburger.is-active .line:nth-child(3) {
+    transform: translateY(-9px) rotate(-45deg); }
+
+.animate_graphic {
+  animation: 2s infinite alternate movingAn; }
+
+@keyframes movingAn {
+  from {
+    transform: translate(0px); }
+  to {
+    transform: translate(10px); } }
 
 /*# sourceMappingURL=main.css.map */
