--- a/sass/main.sass
+++ b/sass/main.sass
@@ -455,9 +455,10 @@ section.information
 					justify-content: center
 					width: 16px
 					height: 16px
-					transition: transform .4s ease
 					text-decorattion: none
-					&:hover
+					>img
+						transition: transform .4s ease					
+					&:hover >img
 						transform: translateY(-8px)
 				&:last-child
 					margin-right: 0
@@ -528,3 +529,36 @@ section.information
 		font-size: 16px
 		margin-top: 66px
 		text-align: center
+
+.hamburger
+	display: none
+	position: relative
+	right: 15px
+	top: 0
+	.line
+		width: 24px
+		height: 3px
+		background-color: #333
+		display: block
+		margin: 6px auto
+		transition: all 0.3s ease-in-out
+	&:hover
+		cursor: pointer
+	&.is-active .line
+		&:nth-child(1)
+			transform: translateY(9px) rotate(45deg)
+		&:nth-child(2)
+			opacity: 0
+		&:nth-child(3)
+			transform: translateY(-9px) rotate(-45deg)
+			
+.animate_graphic
+	animation: 2s infinite alternate movingAn
+
+@keyframes movingAn
+	from 
+		transform: translate(0px)
+	to
+		transform: translate(10px)
+
+	
